bauer/tests/ui/default-repeat.fail.stderr
error: `repeat` cannot be added with `default`
 --> tests/ui/default-repeat.fail.rs:5:42
  |
5 |     #[builder(default = "String::new()", repeat)]
  |                                          ^^^^^^

warning: unused variable: `field_a`
 --> tests/ui/default-repeat.fail.rs:6:5
  |
6 |     field_a: Vec<String>,
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_a`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
